# nerf2mesh-nerfstudio

./: .gitignore  README.md  end_to_end_train.py  mcubes_test.py  pyproject.toml  train.py  train_stage1.py
nerf2mesh/: config.py  datamanager.py  dataparser.py  field.py  model.py  nerf2mesh.py  pipeline.py  ray_generator.py  sampler.py  scheduler.py  trainer.py  utils.py
raymarching/: raymarching.py
