[project]
name = "nerf2mesh"
description = "Nerf2Mesh implementation for NeRFStudio"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.3", "torch", "torchvision", "tinycudann @ git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch", "pymeshlab", "PyMCubes", "trimesh"] 

[tool.setuptools.packages.find]
include = ["nerf2mesh*", "raymarching"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
nerf2mesh = 'nerf2mesh.config:nerf2mesh'