[project]
name = "nerf2mesh"
description = "Nerf2Mesh implementation for NeRFStudio"
version = "0.1.0"

dependencies = [
    "nerfstudio",
    "torch",
    "torchvision",
    "tinycudann@git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch",
    "pymeshlab==2022.2.post4",
    "PyMCubes",
    "trimesh",
    "nvdiffrast@git+https://github.com/NVlabs/nvdiffrast/",
    "torch_scatter",
    "pytorch3d@git+https://github.com/facebookresearch/pytorch3d.git@stable"
]

[tool.setuptools.packages.find]
include = ["nerf2mesh*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
nerf2mesh = 'nerf2mesh.config:nerf2mesh'
